vlib/v/checker/tests/array_filter_anon_fn_err_a.vv
fn main() {
	a := [1,2,3,4].filter(fn(a int, b int) bool { return a > 0 })
	println(a)
}
